--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				<img src="img/Wahome.png">
 				<div>
 					<h3>WAHOME KINYUA</h3>
-                    <P>Accounts Officer</P>
+                    <P>Finance & Admin Manager</P>
 				</div>
 			</div>
             <div class="team-col">
